Add href to the recipes hyperlinks

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>ODIN'S FOOD RECIPE</h1>
-    <a href="">pad thai</a>
-    <a href="">spicy thai basil chicken</a>
-    <a href="">thai beef salad</a>
+    <a href="./recipes/pad-thai.html">pad thai</a>
+    <a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a>
+    <a href="./recipes/thai beef salad.html">thai beef salad</a>
     
 </body>
 </html>
