Modified index.html, spicy thai basil chicken.html, thai beef salad.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>ODIN'S FOOD RECIPE</h1>
-    <a href="./recipes/pad-thai.html">pad thai</a>
-    <a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a>
-    <a href="./recipes/thai beef salad.html">thai beef salad</a>
+    <p><a href="./recipes/pad-thai.html">pad thai</a></p>
+    <p><a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a></p>
+    <p><a href="./recipes/thai beef salad.html">thai beef salad</a></p>
     
 </body>
 </html>
