--- a/recipes/spicy thai basil chicken.html
+++ b/recipes/spicy thai basil chicken.html
@@ -16,6 +16,8 @@
         garlic, and shallots, and seasoned with a sweet and salty sauce and finished with fresh basil. 
         It's a classic dish in Thai cuisine and can be found in restaurants and as a popular street food. </p>
 
+        <h2>INGREDIENTS</h2>
+
     <ul>
         <li><strong>Sauce</strong>
         <p>Chicken broth, oyster sauce, soy sauce, fish sauce, white sugar, 
