Add directions to pad-thai.html

--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -40,5 +40,19 @@
         <li><strong>1 cup green onions cut into 1-inch pieces</strong></li>
     
     </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>do shit</li>
+
+        <li>do shit</li>
+
+        <li>do shit</li>
+
+        <li>do shit</li>
+
+        <li>do shit</li>
+    </ol>
+
 </body>
 </html>
