Add flexbox and stylized index and subpages.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href=index.css>
 </head>
 <body>
-    <h1>ODIN'S FOOD RECIPE</h1>
-    <p><a href="./recipes/pad-thai.html">pad thai</a></p>
-    <p><a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a></p>
-    <p><a href="./recipes/thai beef salad.html">thai beef salad</a></p>
-    
+    <section class="container">
+        <div class="title">
+            <h1>My Favorite Food Recipes</h1>
+        </div>
+        <div class="introduction">
+            <p>I'll replace this with something else, I don't like padthai. <br>
+                <a href="./recipes/pad-thai.html">pad thai</a></p>
+            <p>I actually can eat basil, believe it or not. It just need to be thoroughly cooked or it will taste like soap. <br>
+                <a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a></p>
+            <p>I don't like salad, and beef have always been too tough for my teeth. Why is this here? <br>
+                <a href="./recipes/thai beef salad.html">thai beef salad</a></p>
+        </div>
+    </section>
 </body>
 </html>
