Change the index.html and index.css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="title">
             <h1>My Favorite Food Recipes</h1>
         </div>
-        <div class="introduction">
-            <p>I'll replace this with something else, I don't like padthai. <br>
-                <a href="./recipes/pad-thai.html">pad thai</a></p>
+        <div class="linkHub">
+            <p>I'll replace this with something else, I don't like pad thai. <br>
+                <a href="./recipes/pad-thai.html">Check out my pad thai recipe here!</a></p>
             <p>I actually can eat basil, believe it or not. It just need to be thoroughly cooked or it will taste like soap. <br>
-                <a href="./recipes/spicy thai basil chicken.html">spicy thai basil chicken</a></p>
+                <a href="./recipes/spicy thai basil chicken.html">Check out my spicy thai basil chicken recipe here!</a></p>
             <p>I don't like salad, and beef have always been too tough for my teeth. Why is this here? <br>
-                <a href="./recipes/thai beef salad.html">thai beef salad</a></p>
+                <a href="./recipes/thai beef salad.html">Check out my thai beef salad recipe here!</a></p>
         </div>
     </section>
 </body>
